@@ -4,6 +4,10 @@ Added pause message to play area for when 'go' is paused (instead of just when '
 Bugfix: When energy vs position graph is copied, if the data is off-the-chart, it comes up bogus.
 Relabeled the "show pie chart" checkbox to "show pie chart".
 Added a legend item for black potential energy.
+Bugfix: Energy vs time chart has 'java application window' covering up the good parts.
+        This window has a bigger default height.
+Bugfix: Reset from space causes crash.
+Added more key options: 'a' for add skater, 'd' for delete, 'r' for remove
 
 1.02.22 (11-29-2006)
 Bugfix: when entering playback mode, floor track duplicated.
